--- a/todo
+++ b/todo
@@ -12,6 +12,8 @@ INBOX
 
 TODO / PRIO
 
+cache values of visible terrain (only recompute point if it was never calculated)
+
 mvp: gravity, model player as point, elastic collision, (no controls, no auto velocity, fixed camera)
 
 dec: how to realize ground collision?
@@ -21,6 +23,7 @@ dec: how to realize ground collision?
 
 dec: treat player as point object or circle?
   if circle: figure out how circle/sement collision works
+
 
 
 collision response
